tests/build/cases/widget_new/malformed_property_path1.stderr
error: expected property or when
 --> cases/widget_new/malformed_property_path1.rs:5:9
  |
5 |         _ = 0;
  |         ^
